--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,9 @@
     <string name="coordinate_us">ارتباط با ما</string>
     <string name="title_activity_lecture">سخنرانی ها</string>
     <string name="title_activity_meeting">جلسات</string>
-    
+
     <string name="action_settings">Settings</string>
     <string name="title_activity_music">MusicActivity</string>
+    <string name="title_activity_gallery">گالری تصاویر</string>
+    <string name="section_format">تصویر شماره: %1$d</string>
 </resources>
